--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Educational Knowledge</title>
+  <title>Edu-Knowledge</title>
   <link rel="icon" href="./images/favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,7 +12,43 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <!-- Header Section Start -->
+  <header id="eduHeader">
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-light py-5">
+      <div class="container">
+        <a class="navbar-brand fs-4 fw-bold text-secondary" href="./index.html">Edu Knowledge</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="#">Courses</a>
+            </li>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="#">Instructor's</a>
+            </li>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="#">Success</a>
+            </li>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+          <button class="btn btn-outline-info fw-semibold px-4" type="submit">Register</button>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar End -->
+    <!-- Carousel Start -->
+    <section class="carousel"></section>
+    <!-- Carousel End -->
+  </header>
+  <!-- Header Section End -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
