--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Header Section Start -->
   <header id="eduHeader">
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-light py-5">
+    <nav class="navbar navbar-expand-lg bg-white py-4">
       <div class="container">
         <a class="navbar-brand fs-4 fw-bold text-secondary" href="./index.html">Edu Knowledge</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,10 +45,57 @@
     </nav>
     <!-- Navbar End -->
     <!-- Carousel Start -->
-    <section class="carousel"></section>
+    <section class="carousel">
+      <div class="container">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/cover/cover-1.png" class="d-block w-100" alt="cover 1">
+              <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
+                  <div class="caption-content">
+                    <h4>Get Started Digital Learning</h4>
+                    <p class="w-75 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <a href="#" class="fw-semibold btn btn-info text-white px-4 py-2">Get Started</a>
+                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/cover/cover-2.png" class="d-block w-100" alt="cover 2">
+              <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
+                <div class="caption-content">
+                  <h4>Get Started Digital Learning</h4>
+                  <p class="w-75 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  <a href="#" class="fw-semibold btn btn-info text-white px-4 py-2">Get Started</a>
+                </div>
+            </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/cover/cover-3.png" class="d-block w-100" alt="cover 3">
+              <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
+                <div class="caption-content">
+                  <h4>Get Started Digital Learning</h4>
+                  <p class="w-75 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  <a href="#" class="fw-semibold btn btn-info text-white px-4 py-2">Get Started</a>
+                </div>
+            </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
     <!-- Carousel End -->
   </header>
   <!-- Header Section End -->
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
