--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               <img src="./images/cover/cover-1.png" class="d-block w-100" alt="cover 1">
               <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
                   <div class="caption-content">
-                    <h4>Get Started Digital Learning</h4>
-                    <p class="w-75 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <h4 class="text-uppercase">learn anything at anytime</h4>
+                    <p class="w-75 mx-auto">Browse our course categories where you can develop your skills anytime from the best professionals.</p>
                     <a href="#" class="fw-semibold btn btn-info text-white px-4 py-2">Get Started</a>
                   </div>
               </div>
@@ -63,8 +63,8 @@
               <img src="./images/cover/cover-2.png" class="d-block w-100" alt="cover 2">
               <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
                 <div class="caption-content">
-                  <h4>Get Started Digital Learning</h4>
-                  <p class="w-75 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  <h4 class="text-uppercase">learn anything at anytime</h4>
+                  <p class="w-75 mx-auto">Browse our course categories where you can develop your skills anytime from the best professionals.</p>
                   <a href="#" class="fw-semibold btn btn-info text-white px-4 py-2">Get Started</a>
                 </div>
             </div>
@@ -73,8 +73,8 @@
               <img src="./images/cover/cover-3.png" class="d-block w-100" alt="cover 3">
               <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
                 <div class="caption-content">
-                  <h4>Get Started Digital Learning</h4>
-                  <p class="w-75 mx-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  <h4 class="text-uppercase">learn anything at anytime</h4>
+                  <p class="w-75 mx-auto">Browse our course categories where you can develop your skills anytime from the best professionals.</p>
                   <a href="#" class="fw-semibold btn btn-info text-white px-4 py-2">Get Started</a>
                 </div>
             </div>
@@ -94,7 +94,97 @@
     <!-- Carousel End -->
   </header>
   <!-- Header Section End -->
-
+  <!-- Main Section Start -->
+  <main id="eduMain" class="py-5">
+    <div class="container">
+      <section class="newly-courses py-5">
+        <div class="edu-title text-center pb-5">
+          <h2 class="fw-semibold fs-2">Newly Launched Courses</h2>
+          <p>Browse our latest courses where you can develop your skills anytime.</p>
+        </div>
+        <div class="courses">
+          <div class="row g-4">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
+                <div class="course-image">
+                  <img src="./images/course/course-1.png" alt="course 1">
+                </div>
+                <div class="course-content pe-3">
+                  <h3 class="fs-4 fw-semibold pb-2">UI/UX Design Patterns - 2022</h3>
+                  <p class="text-muted fs-6">Go deep into User Interface design patterns and UI components + create full design using figma.</p>
+                  <h5 class="fs-6 fw-semibold text-info">Price : 50.95$</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
+                <div class="course-image">
+                  <img src="./images/course/course-2.png" alt="course 2">
+                </div>
+                <div class="course-content pe-3">
+                  <h3 class="fs-4 fw-semibold pb-2">Advanced Javascript</h3>
+                  <p class="text-muted fs-6">Modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory.</p>
+                  <h5 class="fs-6 fw-semibold text-info">Price : 11.99$</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
+                <div class="course-image">
+                  <img src="./images/course/course-3.png" alt="course 3">
+                </div>
+                <div class="course-content pe-3">
+                  <h3 class="fs-4 fw-semibold pb-2">MERN Stack Development</h3>
+                  <p class="text-muted fs-6">Practical MERN Stack Development: JavaScript, React, Nodejs, API, Bootstrap, Git and Postman.</p>
+                  <h5 class="fs-6 fw-semibold text-info">Price : 99.50$</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
+                <div class="course-image">
+                  <img src="./images/course/course-4.png" alt="course 4">
+                </div>
+                <div class="course-content pe-3">
+                  <h3 class="fs-4 fw-semibold pb-2">Digital Marketing 101</h3>
+                  <p class="text-muted fs-6">Top Digital Marketing Course | Facebook Ads, Google/YouTube, Display/Video.</p>
+                  <h5 class="fs-6 fw-semibold text-info">Price : 20.50$</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
+                <div class="course-image">
+                  <img src="./images/course/course-5.png" alt="course 5">
+                </div>
+                <div class="course-content pe-3">
+                  <h3 class="fs-4 fw-semibold pb-2">Photography Masterclass</h3>
+                  <p class="text-muted fs-6">Photography Class: How to Take Amazing Photos for Beginners & Advanced Photographers.</p>
+                  <h5 class="fs-6 fw-semibold text-info">Price : 95.55.$</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
+                <div class="course-image">
+                  <img src="./images/course/course-6.png" alt="course 6">
+                </div>
+                <div class="course-content pe-3">
+                  <h3 class="fs-4 fw-semibold pb-2">After Effects Motion Graphics</h3>
+                  <p class="text-muted fs-6">Create stunning Motion Graphics, VFX Visual Effects & VFX Compositing with 50+ projects.</p>
+                  <h5 class="fs-6 fw-semibold text-info">Price : 15.90$</h5>
+                </div>
+              </div>
+            </div>
+            <div class="more-course text-center mt-5">
+              <a href="#" class="btn btn-primary px-4 py-2 fw-semibold">See More Courses</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+  <!-- Main Section End -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
