Course Responsive update.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
   <!-- Main Section Start -->
   <main id="eduMain" class="py-5">
     <div class="container">
+      <!-- Course Section Start -->
       <section class="newly-courses py-5">
         <div class="edu-title text-center pb-5">
           <h2 class="fw-semibold fs-2">Newly Launched Courses</h2>
@@ -105,74 +106,110 @@
         <div class="courses">
           <div class="row g-4">
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
-                <div class="course-image">
-                  <img src="./images/course/course-1.png" alt="course 1">
-                </div>
-                <div class="course-content pe-3">
-                  <h3 class="fs-4 fw-semibold pb-2">UI/UX Design Patterns - 2022</h3>
-                  <p class="text-muted fs-6">Go deep into User Interface design patterns and UI components + create full design using figma.</p>
-                  <h5 class="fs-6 fw-semibold text-info">Price : 50.95$</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
-                <div class="course-image">
-                  <img src="./images/course/course-2.png" alt="course 2">
-                </div>
-                <div class="course-content pe-3">
-                  <h3 class="fs-4 fw-semibold pb-2">Advanced Javascript</h3>
-                  <p class="text-muted fs-6">Modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory.</p>
-                  <h5 class="fs-6 fw-semibold text-info">Price : 11.99$</h5>
+              <div class="course border rounded">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <div class="course-image">
+                      <img class="w-100" src="./images/course/course-1.png" alt="course 1">
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
+                      <h3 class="fs-4 fw-semibold pb-2">UI/UX Design Patterns - 2022</h3>
+                      <p class="text-muted fs-6">Go deep into User Interface design patterns and UI components + create full design using figma.</p>
+                      <h5 class="fs-6 fw-semibold text-info">Price : 50.95$</h5>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
-                <div class="course-image">
-                  <img src="./images/course/course-3.png" alt="course 3">
-                </div>
-                <div class="course-content pe-3">
-                  <h3 class="fs-4 fw-semibold pb-2">MERN Stack Development</h3>
-                  <p class="text-muted fs-6">Practical MERN Stack Development: JavaScript, React, Nodejs, API, Bootstrap, Git and Postman.</p>
-                  <h5 class="fs-6 fw-semibold text-info">Price : 99.50$</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
-                <div class="course-image">
-                  <img src="./images/course/course-4.png" alt="course 4">
-                </div>
-                <div class="course-content pe-3">
-                  <h3 class="fs-4 fw-semibold pb-2">Digital Marketing 101</h3>
-                  <p class="text-muted fs-6">Top Digital Marketing Course | Facebook Ads, Google/YouTube, Display/Video.</p>
-                  <h5 class="fs-6 fw-semibold text-info">Price : 20.50$</h5>
+              <div class="course border rounded">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <div class="course-image">
+                      <img class="w-100" src="./images/course/course-2.png" alt="course 2">
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
+                      <h3 class="fs-4 fw-semibold pb-2">Advanced Javascript</h3>
+                      <p class="text-muted fs-6">Modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory.</p>
+                      <h5 class="fs-6 fw-semibold text-info">Price : 11.99$</h5>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
-                <div class="course-image">
-                  <img src="./images/course/course-5.png" alt="course 5">
-                </div>
-                <div class="course-content pe-3">
-                  <h3 class="fs-4 fw-semibold pb-2">Photography Masterclass</h3>
-                  <p class="text-muted fs-6">Photography Class: How to Take Amazing Photos for Beginners & Advanced Photographers.</p>
-                  <h5 class="fs-6 fw-semibold text-info">Price : 95.55.$</h5>
+              <div class="course border rounded">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <div class="course-image">
+                      <img class="w-100" src="./images/course/course-3.png" alt="course 3">
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
+                      <h3 class="fs-4 fw-semibold pb-2">MERN Stack Development</h3>
+                      <p class="text-muted fs-6">Practical MERN Stack Development: JavaScript, React, Nodejs, API, Bootstrap, Git and Postman.</p>
+                      <h5 class="fs-6 fw-semibold text-info">Price : 99.50$</h5>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-              <div class="course border rounded d-flex align-items-center justify-content-center gap-4">
-                <div class="course-image">
-                  <img src="./images/course/course-6.png" alt="course 6">
+              <div class="course border rounded">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <div class="course-image">
+                      <img class="w-100" src="./images/course/course-4.png" alt="course 4">
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
+                      <h3 class="fs-4 fw-semibold pb-2">Digital Marketing 101</h3>
+                      <p class="text-muted fs-6">Top Digital Marketing Course | Facebook Ads, Google/YouTube, Display/Video.</p>
+                      <h5 class="fs-6 fw-semibold text-info">Price : 20.50$</h5>
+                    </div>
+                  </div>
                 </div>
-                <div class="course-content pe-3">
-                  <h3 class="fs-4 fw-semibold pb-2">After Effects Motion Graphics</h3>
-                  <p class="text-muted fs-6">Create stunning Motion Graphics, VFX Visual Effects & VFX Compositing with 50+ projects.</p>
-                  <h5 class="fs-6 fw-semibold text-info">Price : 15.90$</h5>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <div class="course-image">
+                      <img class="w-100" src="./images/course/course-5.png" alt="course 5">
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
+                      <h3 class="fs-4 fw-semibold pb-2">Photography Masterclass</h3>
+                      <p class="text-muted fs-6">Photography Class: How to Take Amazing Photos for Beginners & Advanced Photographers.</p>
+                      <h5 class="fs-6 fw-semibold text-info">Price : 95.55$</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="course border rounded">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <div class="course-image">
+                      <img class="w-100" src="./images/course/course-6.png" alt="course 6">
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
+                      <h3 class="fs-4 fw-semibold pb-2">After Effects Motion Graphics</h3>
+                      <p class="text-muted fs-6">Create stunning Motion Graphics, VFX Visual Effects & VFX Compositing with 50+ projects.</p>
+                      <h5 class="fs-6 fw-semibold text-info">Price : 15.90$</h5>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -182,6 +219,8 @@
           </div>
         </div>
       </section>
+      <!-- Course Section End -->
+      <!-- q -->
     </div>
   </main>
   <!-- Main Section End -->
