Join Now section is done.

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
               <div class="course border rounded">
                 <div class="row">
-                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="course-image">
-                      <img class="w-100" src="./images/course/course-1.png" alt="course 1">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-6 col-xl-4">
+                    <div class="course-image h-100">
+                      <img class="w-100 h-100" src="./images/course/course-1.png" alt="course 1">
                     </div>
                   </div>
-                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
-                      <h3 class="fs-4 fw-semibold pb-2">UI/UX Design Patterns - 2022</h3>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-8">
+                    <div class="course-content h-100 mt-3 mt-lg-0 mt-xl-0 d-flex align-items-start justify-content-center flex-column pe-3 p-3 p-lg-0 p-xl-0 pe-lg-3 pe-xl-3">
+                      <h3 class="fs-5 fw-semibold pb-2">UI/UX Design Patterns - 2022</h3>
                       <p class="text-muted fs-6">Go deep into User Interface design patterns and UI components + create full design using figma.</p>
                       <h5 class="fs-6 fw-semibold text-info">Price : 50.95$</h5>
                     </div>
@@ -126,14 +126,14 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
               <div class="course border rounded">
                 <div class="row">
-                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="course-image">
-                      <img class="w-100" src="./images/course/course-2.png" alt="course 2">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-6 col-xl-4">
+                    <div class="course-image h-100">
+                      <img class="w-100 h-100" src="./images/course/course-2.png" alt="course 2">
                     </div>
                   </div>
-                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
-                      <h3 class="fs-4 fw-semibold pb-2">Advanced Javascript</h3>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3 p-3 p-lg-0 p-xl-0 pe-lg-3 pe-xl-3">
+                      <h3 class="fs-5 fw-semibold pb-2">Advanced Javascript</h3>
                       <p class="text-muted fs-6">Modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory.</p>
                       <h5 class="fs-6 fw-semibold text-info">Price : 11.99$</h5>
                     </div>
@@ -144,14 +144,14 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
               <div class="course border rounded">
                 <div class="row">
-                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="course-image">
-                      <img class="w-100" src="./images/course/course-3.png" alt="course 3">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-6 col-xl-4">
+                    <div class="course-image h-100">
+                      <img class="w-100 h-100" src="./images/course/course-3.png" alt="course 3">
                     </div>
                   </div>
-                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
-                      <h3 class="fs-4 fw-semibold pb-2">MERN Stack Development</h3>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3 p-3 p-lg-0 p-xl-0 pe-lg-3 pe-xl-3">
+                      <h3 class="fs-5 fw-semibold pb-2">MERN Stack Development</h3>
                       <p class="text-muted fs-6">Practical MERN Stack Development: JavaScript, React, Nodejs, API, Bootstrap, Git and Postman.</p>
                       <h5 class="fs-6 fw-semibold text-info">Price : 99.50$</h5>
                     </div>
@@ -162,14 +162,14 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
               <div class="course border rounded">
                 <div class="row">
-                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="course-image">
-                      <img class="w-100" src="./images/course/course-4.png" alt="course 4">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-6 col-xl-4">
+                    <div class="course-image h-100">
+                      <img class="w-100 h-100" src="./images/course/course-4.png" alt="course 4">
                     </div>
                   </div>
-                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
-                      <h3 class="fs-4 fw-semibold pb-2">Digital Marketing 101</h3>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3 p-3 p-lg-0 p-xl-0 pe-lg-3 pe-xl-3">
+                      <h3 class="fs-5 fw-semibold pb-2">Digital Marketing 101</h3>
                       <p class="text-muted fs-6">Top Digital Marketing Course | Facebook Ads, Google/YouTube, Display/Video.</p>
                       <h5 class="fs-6 fw-semibold text-info">Price : 20.50$</h5>
                     </div>
@@ -180,14 +180,14 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
               <div class="course border rounded">
                 <div class="row">
-                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="course-image">
-                      <img class="w-100" src="./images/course/course-5.png" alt="course 5">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-6 col-xl-4">
+                    <div class="course-image h-100">
+                      <img class="w-100 h-100" src="./images/course/course-5.png" alt="course 5">
                     </div>
                   </div>
-                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
-                      <h3 class="fs-4 fw-semibold pb-2">Photography Masterclass</h3>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3 p-3 p-lg-0 p-xl-0 pe-lg-3 pe-xl-3">
+                      <h3 class="fs-5 fw-semibold pb-2">Photography Masterclass</h3>
                       <p class="text-muted fs-6">Photography Class: How to Take Amazing Photos for Beginners & Advanced Photographers.</p>
                       <h5 class="fs-6 fw-semibold text-info">Price : 95.55$</h5>
                     </div>
@@ -198,14 +198,14 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
               <div class="course border rounded">
                 <div class="row">
-                  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="course-image">
-                      <img class="w-100" src="./images/course/course-6.png" alt="course 6">
+                  <div class="col-12 col-sm-12 col-md-4 col-lg-6 col-xl-4">
+                    <div class="course-image h-100">
+                      <img class="w-100 h-100" src="./images/course/course-6.png" alt="course 6">
                     </div>
                   </div>
-                  <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3">
-                      <h3 class="fs-4 fw-semibold pb-2">After Effects Motion Graphics</h3>
+                  <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-8">
+                    <div class="course-content h-100 d-flex align-items-start justify-content-center flex-column pe-3 p-3 p-lg-0 p-xl-0 pe-lg-3 pe-xl-3">
+                      <h3 class="fs-5 fw-semibold pb-2">After Effects Motion Graphics</h3>
                       <p class="text-muted fs-6">Create stunning Motion Graphics, VFX Visual Effects & VFX Compositing with 50+ projects.</p>
                       <h5 class="fs-6 fw-semibold text-info">Price : 15.90$</h5>
                     </div>
@@ -214,13 +214,69 @@
               </div>
             </div>
             <div class="more-course text-center mt-5">
-              <a href="#" class="btn btn-primary px-4 py-2 fw-semibold">See More Courses</a>
+              <a href="#" class="btn btn-info text-white px-4 py-2 fw-semibold">See More Courses</a>
             </div>
           </div>
         </div>
       </section>
       <!-- Course Section End -->
-      <!-- q -->
+      <!-- Join Section start -->
+      <section id="eduJoin" class="py-5">
+        <div class="container">
+          <div class="join-content bg-info p-2 p-sm-2 p-md-5 p-lg-5 p-xl-5 text-center text-sm-center text -md-center text-lg-start text-xl-start rounded">
+            <div class="row p-3">
+              <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
+                <div class="join-text">
+                  <h2 class="text-white fw-semibold">Ready to join?</h2>
+                  <p class="text-white">Having problem learning from a reliable online platform as a student?</p>
+                </div>
+              </div>
+              <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                <div class="join-button d-flex align-items-center justify-content-center justify-content-sm-center justify-content-md-center justify-content-lg-end justify-content-xl-end h-100">
+                  <!-- Button trigger modal -->
+                  <button type="button" class="btn bg-white px-4 py-2 fw-semibold text-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Register Now
+                  </button>
+                  <!-- Modal -->
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="text-info">Create Account</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-3">
+                          <form class="text-start">
+                            <div class="mb-3">
+                              <label for="exampleInputText1" class="form-label">Name</label>
+                              <input type="text" class="form-control" placeholder="Name" id="exampleInputText1" aria-describedby="emailHelp">
+                            </div>
+                            <div class="mb-3">
+                              <label for="exampleInputEmail1" class="form-label">Email</label>
+                              <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <div class="mb-3">
+                              <label for="exampleInputPassword1" class="form-label">Password</label>
+                              <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3">
+                              <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
+                              <input type="password" class="form-control" placeholder="Repeat your password" id="exampleInputPassword1">
+                            </div>
+                            <button type="button" class="btn btn-info text-white fw-semibold  px-4 py-2" data-bs-dismiss="modal">Sign up</button>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Join Section End -->
+      
     </div>
   </main>
   <!-- Main Section End -->
