--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </section>
       <!-- Course Section End -->
       <!-- Join Section start -->
-      <section id="eduJoin" class="py-5">
+      <section class="eduJoin py-5">
         <div class="container">
           <div class="join-content bg-info p-2 p-sm-2 p-md-5 p-lg-5 p-xl-5 text-center text-sm-center text -md-center text-lg-start text-xl-start rounded">
             <div class="row p-3">
@@ -276,7 +276,72 @@
         </div>
       </section>
       <!-- Join Section End -->
-      
+      <!-- FAQ Section Start -->
+      <section class="eduFaq py-5">
+        <div class="container">
+          <div class="edu-title text-center pb-5">
+            <h2 class="fw-semibold fs-3">Frequently Asked Questions</h2>
+            <p>Below you'll find answers to the questions we get asked the most from student.</p>
+          </div>
+          <div class="questions">
+            <div class="row justify-content-center">
+              <div class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-7">
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item border border-0">
+                    <h2 class="accordion-header border rounded mb-3" id="headingOne">
+                      <button class="accordion-button rounded shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Differences between Flex-Box and Grid?
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        ...
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item border border-0">
+                    <h2 class="accordion-header border rounded mb-3" id="headingTwo">
+                      <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Differences between Bootstrap and Tailwind?
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        ...
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item border border-0">
+                    <h2 class="accordion-header border rounded mb-3" id="headingThree">
+                      <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        What is css Box-Model?
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        ...
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item border border-0">
+                    <h2 class="accordion-header border rounded mb-3" id="headingFour">
+                      <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        What is Semantic Tag?
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        ...
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FAQ Section end -->
     </div>
   </main>
   <!-- Main Section End -->
