FAQ answer update.

--- a/index.html
+++ b/index.html
@@ -289,49 +289,51 @@
                 <div class="accordion" id="accordionExample">
                   <div class="accordion-item border border-0">
                     <h2 class="accordion-header border rounded mb-3" id="headingOne">
-                      <button class="accordion-button rounded shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      <button class="accordion-button rounded shadow-none text-secondary fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         Differences between Flex-Box and Grid?
                       </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        ...
+                        <p>CSS <b>Grid</b> and <b>Flexbox</b> are layout models that share similarities and can be used together. The key difference is that CSS Grid can be used to create <b>two-dimensional</b> layouts, while Flexbox can only be used to create <b>one-dimensional</b> layouts. That means you can place components along the <i>X-axis</i> and<i>Y-axis</i> in CSS Grid and only <i>one axis</i> in Flexbox.</p>
                       </div>
                     </div>
                   </div>
                   <div class="accordion-item border border-0">
                     <h2 class="accordion-header border rounded mb-3" id="headingTwo">
-                      <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      <button class="accordion-button collapsed rounded text-secondary fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         Differences between Bootstrap and Tailwind?
                       </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        ...
+                        <p>Bootstrap is a <b>Component-based</b> Framework. It's designed to help developers quickly bootstrap a typical website or app and so comes with a set of pre-made components, along with some utilities for spacing, etc.</p>
+
+                        <p>TailwindCSS is a <b>Utility-first</b> Framework. In contrast to Bootstrap, which provides a few utilities, Tailwind is all utilities. The core framework has no pre-made components, so you'll need to build your own.</p>
                       </div>
                     </div>
                   </div>
                   <div class="accordion-item border border-0">
                     <h2 class="accordion-header border rounded mb-3" id="headingThree">
-                      <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      <button class="accordion-button collapsed rounded text-secondary fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         What is css Box-Model?
                       </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        ...
+                        <p>The CSS box model is a container that contains <b>multiple properties</b> including borders, margin, padding, and the content itself. It is used to create the design and layout of web pages. It can be used as a toolkit for customizing the layout of different elements. According to the CSS box model, the web browser renders every element as a rectangular box.</p>
                       </div>
                     </div>
                   </div>
                   <div class="accordion-item border border-0">
                     <h2 class="accordion-header border rounded mb-3" id="headingFour">
-                      <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                      <button class="accordion-button collapsed rounded text-secondary fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                         What is Semantic Tag?
                       </button>
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        ...
+                        <p>Semantic Tags such as <b>header</b>, <b>nav</b>, <b>section</b>, <b>article</b>, <b>aside</b>, and <b>footer</b> act more or less like <b>div</b> elements. The group other elements together into page sections. However, where a div tag could contain any type of information, it is easy to identify what sort of information would go in a semantic header region.</p>
                       </div>
                     </div>
                   </div>
