Company section is done.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <!-- Course Section Start -->
       <section class="newly-courses py-5">
         <div class="edu-title text-center pb-5">
-          <h2 class="fw-semibold fs-2">Newly Launched Courses</h2>
+          <h2 class="fw-semibold fs-3">Newly Launched Courses</h2>
           <p>Browse our latest courses where you can develop your skills anytime.</p>
         </div>
         <div class="courses">
@@ -344,6 +344,35 @@
         </div>
       </section>
       <!-- FAQ Section end -->
+      <!-- Companies Section Start -->
+      <section class="eduCompany py-5 d-none d-sm-none d-md-none d-lg-block d-xl-block">
+        <div class="container">
+          <div class="edu-title text-center pb-5">
+            <h2 class="fw-semibold fs-3">Trusted by over 800+ companies</h2>
+          </div>
+          <div class="companies d-flex align-items-center justify-content-between">
+            <div class="logo me-lg-4">
+              <img class="img-fluid" src="./images/company/company-1.png" alt="company">
+            </div>
+            <div class="logo me-lg-4">
+              <img class="img-fluid" src="./images/company/company-2.png" alt="company">
+            </div>
+            <div class="logo me-lg-4">
+              <img class="img-fluid" src="./images/company/company-3.png" alt="company">
+            </div>
+            <div class="logo me-lg-4">
+              <img class="img-fluid" src="./images/company/company-4.png" alt="company">
+            </div>
+            <div class="logo me-lg-4">
+              <img class="img-fluid" src="./images/company/company-5.png" alt="company">
+            </div>
+            <div class="logo me-lg-4">
+              <img class="img-fluid" src="./images/company/company-6.png" alt="company">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Companies Section End -->
     </div>
   </main>
   <!-- Main Section End -->
