Footer section is done.

--- a/index.html
+++ b/index.html
@@ -376,8 +376,30 @@
     </div>
   </main>
   <!-- Main Section End -->
-
-
+  <!-- Footer Section Start -->
+  <footer id="eduFooter" class="bg-black py-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-sm-12 col-md-7 col-lg-5 col-xl-4">
+          <div class="footer-content text-center">
+            <h4 class="text-white fw-semibold">Edu Knowledge</h4>
+            <p class="text-white">Room 42-44, 4th Floor New House, Mirpur-1216, Dhaka, Bangladesh.</p>
+            <div class="quick-link text-white">
+              <a class="text-white text-decoration-none" href="#">Privacy Ploicy</a>
+              <span class="px-2">|</span>
+              <a class="text-white text-decoration-none" href="#">Terms of use</a>
+            </div>
+            <div class="social-link mt-3">
+              <a class="text-white fs-3 me-3" href="https://facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+              <a class="text-white fs-3 me-3" href="https://github.com/"><i class="fa-brands fa-square-github"></i></a>
+              <a class="text-white fs-3" href="https://linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Footer Section End -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
