Students Section is done

--- a/index.html
+++ b/index.html
@@ -276,6 +276,64 @@
         </div>
       </section>
       <!-- Join Section End -->
+      <!-- Students Section Start -->
+      <section class="eduStudents py-5">
+        <div class="container">
+          <div class="edu-title text-left pb-4">
+            <h2 class="fw-semibold fs-2">Our Successfull Students</h2>
+            <p>Over 10,000+ Students get their dream job by learning new skills.</p>
+          </div>
+          <div class="students">
+            <div class="row gy-4">
+              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="student border rounded">
+                  <div class="student-img">
+                    <img class="w-100" src="./images/student/student-1.png" alt="student">
+                  </div>
+                  <div class="student-info p-3">
+                    <h4 class="fs-5 fw-semibold text-secondary">MD. Mirza Nahed</h4>
+                    <p class="fs-6 m-0 text-muted">Front-End Developer</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="student border rounded">
+                  <div class="student-img">
+                    <img class="w-100" src="./images/student/student-2.png" alt="student">
+                  </div>
+                  <div class="student-info p-3">
+                    <h4 class="fs-5 fw-semibold text-secondary">Jannatul Islam</h4>
+                    <p class="fs-6 m-0 text-muted">Motion Design</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="student border rounded">
+                  <div class="student-img">
+                    <img class="w-100" src="./images/student/student-3.png" alt="student">
+                  </div>
+                  <div class="student-info p-3">
+                    <h4 class="fs-5 fw-semibold text-secondary">Nazmul Haque Prince</h4>
+                    <p class="fs-6 m-0 text-muted">Front-End Developer</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="student border rounded">
+                  <div class="student-img">
+                    <img class="w-100" src="./images/student/student-4.png" alt="student">
+                  </div>
+                  <div class="student-info p-3">
+                    <h4 class="fs-5 fw-semibold text-secondary">Nishi Akter</h4>
+                    <p class="fs-6 m-0 text-muted">Web Developer</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Students Section End -->
       <!-- FAQ Section Start -->
       <section class="eduFaq py-5">
         <div class="container">
