--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#">Success</a>
             </li>
             <li class="nav-item pe-5">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">About Us</a>
             </li>
           </ul>
           <button class="btn btn-outline-info fw-semibold px-4" type="submit">Register</button>
@@ -48,7 +48,7 @@
     <section class="carousel">
       <div class="container">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-          <div class="carousel-inner">
+          <div class="carousel-inner rounded">
             <div class="carousel-item active">
               <img src="./images/cover/cover-1.png" class="d-block w-100" alt="cover 1">
               <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
@@ -220,6 +220,43 @@
         </div>
       </section>
       <!-- Course Section End -->
+      <!-- elearning section start -->
+      <section class="eduElearning py-5">
+        <div class="container">
+          <div class="elearning bg-MintCream rounded">
+            <div class="row">
+              <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-5">
+                <div class="elearning-image h-100">
+                  <img class="img-fluid h-100 object-fit" src="./images/working.png" alt="working-man">
+                </div>
+              </div>
+              <div class="col-12 col-sm-12 col-md-6 col-lg-7 col-xl-7">
+                <div class="elearning-content p-3 p-sm-3 p-md-3 p-lg-5 p-xl-5 h-100 d-flex align-items-start justify-content-center flex-column">
+                  <h2 class="fs-3 fw-semibold pb-2">Explore The elearning Institute</h2>
+                  <p>Learn about more than 50,000 teaching resources, including videos and materials with in-depth teaching notes and reviews. Registration is free for next 1000 students.</p>
+                  <p>Enroll in a program created for professionals and receive personalized course recommendations. Take our courses to build your knowledge.</p>
+                  <div class="counter d-flex align-items-center flex-wrap my-3">
+                    <div class="course me-3 me-lg-5 me-xl-5">
+                      <h3 class="fw-bold">3.2K+</h3>
+                      <p>Online Course</p>
+                    </div>
+                    <div class="member me-3 me-lg-5 me-xl-5">
+                      <h3 class="fw-bold">600+</h3>
+                      <p>Expert member</p>
+                    </div>
+                    <div class="review">
+                      <h3 class="fw-bold">1k+</h3>
+                      <p>Rating & Review</p>
+                    </div>
+                  </div>
+                  <a href="#" class="bg-info text-white fw-semibold px-4 py-2 rounded text-decoration-none">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- elearning section end -->
       <!-- Join Section start -->
       <section class="eduJoin py-5">
         <div class="container">
@@ -227,7 +264,7 @@
             <div class="row p-3">
               <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
                 <div class="join-text">
-                  <h2 class="text-white fw-semibold">Ready to join?</h2>
+                  <h2 class="text-white fw-semibold">Ready to try it out?</h2>
                   <p class="text-white">Having problem learning from a reliable online platform as a student?</p>
                 </div>
               </div>
@@ -263,7 +300,7 @@
                               <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
                               <input type="password" class="form-control" placeholder="Repeat your password" id="exampleInputPassword1">
                             </div>
-                            <button type="button" class="btn btn-info text-white fw-semibold  px-4 py-2" data-bs-dismiss="modal">Sign up</button>
+                            <button type="button" class="btn btn-info text-white fw-semibold px-4 py-2" data-bs-dismiss="modal">Sign up</button>
                           </form>
                         </div>
                       </div>
@@ -448,9 +485,9 @@
               <a class="text-white text-decoration-none" href="#">Terms of use</a>
             </div>
             <div class="social-link mt-3">
-              <a class="text-white fs-3 me-3" href="https://facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
-              <a class="text-white fs-3 me-3" href="https://github.com/"><i class="fa-brands fa-square-github"></i></a>
-              <a class="text-white fs-3" href="https://linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+              <a class="text-white fs-3 me-3" target="_blank" href="https://facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+              <a class="text-white fs-3 me-3" target="_blank" href="https://github.com/"><i class="fa-brands fa-square-github"></i></a>
+              <a class="text-white fs-3" target="_blank" href="https://linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
         </div>
