--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
   <!-- Header Section Start -->
   <header id="eduHeader">
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white py-4">
+    <nav class="navbar navbar-expand-lg bg-white py-4 fixed-top">
       <div class="container">
         <a class="navbar-brand fs-4 fw-bold text-secondary" href="./index.html">Edu Knowledge</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler pb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <img src="./images/hamburger-menu.png" alt="hamburger-menu">
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item pe-5">
+            <li class="nav-item pe-5 pe-md-4">
               <a class="nav-link" href="#">Home</a>
             </li>
-            <li class="nav-item pe-5">
+            <li class="nav-item pe-5 pe-md-4">
               <a class="nav-link" href="#">Courses</a>
             </li>
-            <li class="nav-item pe-5">
-              <a class="nav-link" href="#">Instructor's</a>
-            </li>
-            <li class="nav-item pe-5">
-              <a class="nav-link" href="#">Success</a>
-            </li>
-            <li class="nav-item pe-5">
+            <li class="nav-item pe-5 pe-md-4">
               <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item pe-5 pe-md-4">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li class="nav-item pe-5 pe-md-4">
+              <a class="nav-link" href="#">FAQ</a>
             </li>
           </ul>
           <button class="btn btn-outline-info fw-semibold px-4" type="submit">Register</button>
@@ -45,9 +45,9 @@
     </nav>
     <!-- Navbar End -->
     <!-- Carousel Start -->
-    <section class="carousel">
+    <section class="carousel mt-5 pt-5">
       <div class="container">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div id="carouselExampleCaptions" class="carousel slide pt-3" data-bs-ride="false">
           <div class="carousel-inner rounded">
             <div class="carousel-item active">
               <img src="./images/cover/cover-1.png" class="d-block w-100" alt="cover 1">
