--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item pe-5 pe-md-4">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#eduHeader">Home</a>
             </li>
             <li class="nav-item pe-5 pe-md-4">
-              <a class="nav-link" href="#">Courses</a>
+              <a class="nav-link" href="#eduCourse">Courses</a>
             </li>
             <li class="nav-item pe-5 pe-md-4">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#eduElearning">About Us</a>
             </li>
             <li class="nav-item pe-5 pe-md-4">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="#eduFooter">Contact Us</a>
             </li>
             <li class="nav-item pe-5 pe-md-4">
-              <a class="nav-link" href="#">FAQ</a>
+              <a class="nav-link" href="#eduFaq">FAQ</a>
             </li>
           </ul>
           <button class="btn btn-outline-info fw-semibold px-4" type="submit">Register</button>
@@ -98,8 +98,8 @@
   <main id="eduMain" class="py-5">
     <div class="container">
       <!-- Course Section Start -->
-      <section class="newly-courses py-5">
-        <div class="edu-title text-center pb-5">
+      <section class="newly-courses py-1 py-sm-1 py-md-2 py-lg-5 py-xl-5">
+        <div id="eduCourse" class="edu-title text-center pb-3 pb-sm-3 pb-md-3 pb-lg-5 pb-xl-5">
           <h2 class="fw-semibold fs-3">Newly Launched Courses</h2>
           <p>Browse our latest courses where you can develop your skills anytime.</p>
         </div>
@@ -221,7 +221,7 @@
       </section>
       <!-- Course Section End -->
       <!-- elearning section start -->
-      <section class="eduElearning py-5">
+      <section id="eduElearning" class="eduElearning py-5">
         <div class="container">
           <div class="elearning bg-MintCream rounded">
             <div class="row">
@@ -372,7 +372,7 @@
       </section>
       <!-- Students Section End -->
       <!-- FAQ Section Start -->
-      <section class="eduFaq py-5">
+      <section id="eduFaq" class="eduFaq py-5">
         <div class="container">
           <div class="edu-title text-center pb-5">
             <h2 class="fw-semibold fs-3">Frequently Asked Questions</h2>
