--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </section>
       <!-- Course Section End -->
       <!-- elearning section start -->
-      <section id="eduElearning" class="eduElearning py-5">
+      <section id="eduElearning" class="eduElearning py-4 py-sm-4 py-md-4 py-lg-5 py-xl-5">
         <div class="container">
           <div class="elearning bg-MintCream rounded">
             <div class="row">
