Join section responsive is done

--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
       </section>
       <!-- elearning section end -->
       <!-- Join Section start -->
-      <section class="eduJoin py-5">
+      <section class="eduJoin py-1 py-sm-1 py-md-2 py-lg-5 py-xl-5">
         <div class="container">
-          <div class="join-content bg-info p-2 p-sm-2 p-md-5 p-lg-5 p-xl-5 text-center text-sm-center text -md-center text-lg-start text-xl-start rounded">
+          <div class="join-content bg-info p-1 p-sm-1 p-md-5 p-lg-5 p-xl-5 text-center text-sm-center text -md-center text-lg-start text-xl-start rounded">
             <div class="row p-3">
               <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
                 <div class="join-text">
