--- a/index.html
+++ b/index.html
@@ -314,15 +314,15 @@
       </section>
       <!-- Join Section End -->
       <!-- Students Section Start -->
-      <section class="eduStudents py-5">
+      <section class="eduStudents py-1 py-sm-1 py-md-2 py-lg-5 py-xl-5">
         <div class="container">
-          <div class="edu-title text-left pb-4">
+          <div class="edu-title text-left pb-4 pt-4 pt-sm-4 pt-md-4 pt-lg-0 pt-xl-0">
             <h2 class="fw-semibold fs-2">Our Successfull Students</h2>
             <p>Over 10,000+ Students get their dream job by learning new skills.</p>
           </div>
           <div class="students">
             <div class="row gy-4">
-              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+              <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <div class="student border rounded">
                   <div class="student-img">
                     <img class="w-100" src="./images/student/student-1.png" alt="student">
@@ -333,7 +333,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+              <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <div class="student border rounded">
                   <div class="student-img">
                     <img class="w-100" src="./images/student/student-2.png" alt="student">
@@ -344,18 +344,18 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+              <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <div class="student border rounded">
                   <div class="student-img">
                     <img class="w-100" src="./images/student/student-3.png" alt="student">
                   </div>
                   <div class="student-info p-3">
-                    <h4 class="fs-5 fw-semibold text-secondary">Nazmul Haque Prince</h4>
+                    <h4 class="fs-5 fw-semibold text-secondary">Nazmul Haque</h4>
                     <p class="fs-6 m-0 text-muted">Front-End Developer</p>
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
+              <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <div class="student border rounded">
                   <div class="student-img">
                     <img class="w-100" src="./images/student/student-4.png" alt="student">
