FAQ section responsive is done

--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
       </section>
       <!-- Students Section End -->
       <!-- FAQ Section Start -->
-      <section id="eduFaq" class="eduFaq py-5">
+      <section id="eduFaq" class="eduFaq py-3 py-sm-3 py-md-3 py-lg-5 py-xl-5">
         <div class="container">
-          <div class="edu-title text-center pb-5">
+          <div class="edu-title text-center pb-3 pb-sm-3 pb-md-3 pb-lg-5 pb-xl-5">
             <h2 class="fw-semibold fs-3">Frequently Asked Questions</h2>
             <p>Below you'll find answers to the questions we get asked the most from student.</p>
           </div>
