--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <img src="./images/cover/cover-2.png" class="d-block w-100" alt="cover 2">
               <div class="carousel-caption start-0 bottom-0 w-100 h-100 carousel-bg d-flex align-items-center justify-content-center">
                 <div class="caption-content">
-                  <h4 class="text-uppercase">learn anything at anytime</h4>
+                  <h4 class="text-uppercase">learn anything at anywhere</h4>
                   <p class="w-75 mx-auto">Browse our course categories where you can develop your skills anytime from the best professionals.</p>
                   <a href="#" class="fw-semibold btn btn-info text-white px-4 py-2">Get Started</a>
                 </div>
